<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EventFragment">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="221dp"
            android:background="@drawable/bg_bright"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="29dp"
                android:text="@string/title2"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="59dp"
                android:text="@string/name"
                android:textColor="@color/orange"
                android:textSize="30sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_marginStart="210dp"
                android:layout_marginTop="52dp"
                android:src="@drawable/vec2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_marginStart="220dp"
                android:layout_marginTop="65dp"
                android:src="@drawable/vec2" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_marginStart="210dp"
                android:layout_marginTop="77dp"
                android:src="@drawable/vec2" />


        </RelativeLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="313dp"
            android:layout_height="55dp"
            android:layout_marginTop="192dp"
            android:background="@drawable/custom_button"
            android:text="@string/btn1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

        <Button
            android:id="@+id/button4"
            android:layout_width="313dp"
            android:layout_height="55dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/custom_button"
            android:text="@string/btn2"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button3"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <ImageView
            android:layout_width="276dp"
            android:layout_height="217dp"
            android:layout_marginTop="56dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>